# triangulate-master

triangulate-master/: CMakeLists.txt  Point.h  README.md  Vector.h  main.cpp  polygon.cpp  polygon.h  triangulation.cpp  triangulation.h
triangulate-master/polygons/: beetle.poly  dog.poly  star.poly
